@@ -30,8 +30,8 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
     implementation 'com.oracle.database.jdbc:ojdbc8:21.9.0.0'
-    implementation 'org.springframework:spring-beans:5.3.25'
-    implementation 'org.springframework:spring-jdbc:5.3.25'
+    implementation 'org.springframework:spring-beans:5.3.26'
+    implementation 'org.springframework:spring-jdbc:5.3.26'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
